# editline

./: .darcs-boring  .travis.yml  LICENSE  aclocal.m4  configure.ac  editline.buildinfo.in  editline.cabal
System/Console/: Editline.hsc
_darcs/: hashed_inventory  tentative_pristine
_darcs/inventories/: 0000002389-4054a5057bd23a72a2d2a5222a925056574bad4e8fce746c5f699c95aec11597  0000003682-90b74b88730c805714c48ab2ec09b43a419f87240e1e74da5df137eff27dfecf
_darcs/patches/: 0000000135-4c899b37d8fb4e65c9fb955a2ec2f8f4754329624ff283141bbbadcb7e722e71  0000000138-fad831fe0a37ec23601ef96ae795d1c5ddd59e48a1fce01725ab5c28dd0949c3  0000000143-e708ebd7e7a93ab727bb069d6ac63d5d04390fc4e014051f4ce5f2591c9a2cb5  0000000144-ef59aad22192752aafb6210fd32ae8a863f876dfa138bdffecf578e7f4510258  0000000152-573ebab8062646fffdf1ff9ac9bdbdbd530695d8ee2b51426f5d703feae239e8  0000000187-acd32e0a3cdd27cc00e0c5ecca7c1cd9e695fd5de8d3695bf7cba0e838ce3eb5  0000000194-0ce2c382484a70da5a71b230f97ba0b6e25cb58589bd856b264ef0ad3e7a993b  0000000203-1110d084c87fb75cd541d2e3b5c55766898c2921da88b82e93462db4a8d502db  0000000216-e3e4ece82fcd44aeb15875197e02612a465f7a543c0a931abe4d290178d77252  0000000222-26ffd71e3c30fc3dc57701849788adbf90ffe73796b95107f661310fefa395ae  0000000243-30207ccfc860ea39475e9aa5d477de4c7500725e963a8cc1e5fcb0d903a33129  0000000248-c3698edf5ee125544db84ac2eda38eef6d14655a260b0f2f53cc21e783d9c802  0000000252-221e7329098097eb2db9d5c803cc13ee6947f0513cc9758c4bdc7a56dc731fc6  0000000282-1b8cfc79a197318d813a52ce6b7e7c23de12381b6fab1dafa31e85c9b6d07a63  0000000292-318a27682322fedbac0073bd3b4e75771657c3ec79f5324db83e53046b8d6342  0000000313-b68daf573ca96e05373ee274c7ec26d9b106eef7aac8bbfde542f3d46ccd7566  0000000431-7af14ba31ffada773b9ba51cb3db7e15a8d536a5edfa5437e03934e1f43107bb  0000000464-51158609b857b6e1c579c8e6462eea7ea98259fd7adf1f69852e86be75fb6058  0000000466-d5672aaa555ce1ae9fb3cad4394a082b6b75a06b82f3602fa4291dd584cb9a05  0000000470-c7ecd386f13cc0e250e153122a394f13d348f98f46273bccff676013e36042a2  0000000565-049dd67ab41816cdeaf1ddfbd281e755e90b360155c0418399d9f54649cbb205  0000000580-32f45c897c7208b93dc221e397c95d659f6cdea6f1cae97e4bf9be24972f9c6e  0000000706-fe6736cab44350b882b45d9df3bf1ab6474d6ec70a15ae699e76c5dab1b4eee1  (+15 more)
_darcs/prefs/: defaultrepo  prefs  (+1 more)
cbits/: HsEditline.c
include/: HsEditline.h
(+1 files in other folders)
